# dotfiles

./: .chezmoiignore  .editorconfig  .env.example  .gitignore  404.html  CHANGELOG.md  CNAME  LICENSE  README.md  TODO.md  index.html  install.sh  mise.toml  private_dot_zshenv  pyproject.toml  release-please-config.json  renovate.json  sitemap.xml
.devcontainer/: devcontainer.json
.github/: mkdocs.yml  renovate.json
.github/workflows/: docs.yml  license.yml  release.yml
colophon/: index.html
design/: index.html
docs/: CNAME  colophon.md  design.md  index.md  usage.md
home/: .chezmoi.json.tmpl  .chezmoi.yaml.tmpl  .chezmoiexternal.json  .chezmoiexternal.yaml  .chezmoiignore  .chezmoiignore.tmpl  .chezmoiremove  dot_gitconfig  private_dot_editorconfig  private_dot_zshenv
home/.chezmoidata/: externals.versions.yaml
home/.chezmoiscripts/: run_once_after_10_bootstrap-chsh.sh.tmpl  run_once_before_00_bootstrap-decrypt-age-key.sh.tmpl  run_onchange_after_99_exec-zsh-notice.sh
home/.chezmoiscripts/bootstrap/: run_before_00_bootstrap-decrypt-age-key.sh.tmpl  run_once_after_10_bootstrap-chsh.sh.tmpl  run_once_before_00_bootstrap-decrypt-age-key.sh.tmpl
home/.chezmoiscripts/darwin/: run_once_before-packages.sh  run_once_before_10_darwin-install-homebrew.sh  run_onchange_before_10-setup-darwin-bootstrap.sh.tmpl  run_onchange_before_10_darwin-install-homebrew.sh  run_onchange_before_10_setup-install-homebrew.sh.tmpl  run_onchange_before_20-setup-darwin-packages.sh.tmpl  (+3 more)
home/.chezmoitemplates/: ignore_global
home/.hooks/: .install-hcp-cli.sh  .install-hcp-vlt.sh
home/.keys/: key.txt.age
home/Codespace/: dot_editorconfig
home/hooks/: .install-hcp-vlt.sh
home/private_dot_ssh/: .chezmoiignore  allowed_signers.tmpl  authorized_keys.tmpl  config  config.tmpl  private_config.tmpl
private_dot_config/zsh/: dot_zshenv  private_dot_zshrc.tmpl
search/: search_index.json
usage/: index.html
(+76 files in other folders)
