[tool.poetry]
name = "dotfiles"
version = "1.1.1"
description = "Opinionated dotfiles managed by Chezmoi"
authors = ["Rowan Gillson <devops@the.bald.engineer>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.6.0"
pre-commit = "^3.3.3"
mkdocs-material = "^9.1.21"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.1"
tag_format = "$version"
annotated_tag = "true"
version_files = [
  "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
