[project]
name = "dotfiles"
version = "1.4.0"
description = "Opinionated dotfiles managed by Chezmoi"
readme = "README.md"
authors = [
    { name = "Rowan Gillson", email = "devops@the.bald.engineer" }
]
license = "MIT"
requires-python = ">=3.13.5"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "mkdocs-material>=9.6.14",
    "pre-commit>=4.2.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.4.0"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
annotated_tag = "true"
version_files = [
  "pyproject.toml:version"
]
